--- a/source/css/_colors.scss
+++ b/source/css/_colors.scss
@@ -8,6 +8,7 @@ $color-primary-6: #F04930;
 $color-primary-7: #2F92B8; 
 $color-primary-8: #66B2B8; 
 $color-primary-9: #F8CE03;
+$color-white: #fff;
 
 .m-bg-color-primary-1 {
 	background: $color-primary-1;
@@ -129,3 +130,6 @@ $color-primary-9: #F8CE03;
 	border-color: transparent;
 }
 
+.m-color-white-fg {
+	color: $color-white
+}
