--- a/source/css/icons.scss
+++ b/source/css/icons.scss
@@ -7,31 +7,31 @@ $icon-32-x2-width: 34px;
 $icon-128-x2-width: 134px;
 
 .icon-16 {
-    @media (-webkit-max-device-pixel-ratio: 1.99), (max-device-pixel-ratio: 1.99) {
+    @media (-webkit-max-device-pixel-ratio: 1.99),(max-resolution: 1.99dppx), (max-device-pixel-ratio: 1.99) {
         width: 16px;
         height: 16px;
     }
-    @media (-webkit-min-device-pixel-ratio: 2), (min-device-pixel-ratio: 2) {
+    @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx), (min-device-pixel-ratio: 2) {
         width: $icon-16-x2-width;
         height: $icon-16-x2-width;
     }
 }
 .icon-32 {
-    @media (-webkit-max-device-pixel-ratio: 1.99), (max-device-pixel-ratio: 1.99) {
+    @media (-webkit-max-device-pixel-ratio: 1.99),(max-resolution: 1.99dppx),(max-resolution: 1.99dppx), (max-device-pixel-ratio: 1.99) {
         width: 32px;
         height: 32px;
     }
-    @media (-webkit-min-device-pixel-ratio: 2), (min-device-pixel-ratio: 2) {
+    @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx), (min-device-pixel-ratio: 2) {
         width: $icon-32-x2-width;
         height: $icon-32-x2-width;
     }
 }
 .icon-128 {
-    @media (-webkit-max-device-pixel-ratio: 1.99), (max-device-pixel-ratio: 1.99) {
+    @media (-webkit-max-device-pixel-ratio: 1.99),(max-resolution: 1.99dppx), (max-device-pixel-ratio: 1.99) {
         width: 128px;
         height: 128px;
     }
-    @media (-webkit-min-device-pixel-ratio: 2), (min-device-pixel-ratio: 2) {
+    @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx), (min-device-pixel-ratio: 2) {
         width: $icon-128-x2-width;
         height: $icon-128-x2-width;
     }
@@ -46,28 +46,28 @@ $icons-black-32-x2: sprite-map("icons/black/32x32@x2/*.png", $spacing: 10px);
 $icons-black-128-x2: sprite-map("icons/black/128x128@x2/*.png", $spacing: 10px);
 
 .icon-black-16 { 
-    @media (-webkit-max-device-pixel-ratio: 1.99), (max-device-pixel-ratio: 1.99) {
+    @media (-webkit-max-device-pixel-ratio: 1.99),(max-resolution: 1.99dppx), (max-device-pixel-ratio: 1.99) {
         background-image: $icons-black-16;
     }
-    @media (-webkit-min-device-pixel-ratio: 2), (min-device-pixel-ratio: 2) {
+    @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx), (min-device-pixel-ratio: 2) {
         background-image: $icons-black-16-x2; 
         background-size: $icon-16-x2-width image-height(sprite-path($icons-black-16-x2))/2;
     }
 }
 .icon-black-32 { 
-    @media (-webkit-max-device-pixel-ratio: 1.99), (max-device-pixel-ratio: 1.99) {
+    @media (-webkit-max-device-pixel-ratio: 1.99),(max-resolution: 1.99dppx), (max-device-pixel-ratio: 1.99) {
         background-image: $icons-black-32;
     }
-    @media (-webkit-min-device-pixel-ratio: 2), (min-device-pixel-ratio: 2) {
+    @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx), (min-device-pixel-ratio: 2) {
         background-image: $icons-black-32-x2; 
         background-size: $icon-32-x2-width image-height(sprite-path($icons-black-32-x2))/2;
     }
 }
 .icon-black-128 { 
-    @media (-webkit-max-device-pixel-ratio: 1.99), (max-device-pixel-ratio: 1.99) {
+    @media (-webkit-max-device-pixel-ratio: 1.99),(max-resolution: 1.99dppx), (max-device-pixel-ratio: 1.99) {
         background-image: $icons-black-128;
     }
-    @media (-webkit-min-device-pixel-ratio: 2), (min-device-pixel-ratio: 2) {
+    @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx), (min-device-pixel-ratio: 2) {
         background-image: $icons-black-128-x2; 
         background-size: $icon-128-x2-width image-height(sprite-path($icons-black-128-x2))/2;
     }
@@ -86,28 +86,28 @@ $icons-white-32-x2: sprite-map("icons/white/32x32@x2/*.png", $spacing: 10px);
 $icons-white-128-x2: sprite-map("icons/white/128x128@x2/*.png", $spacing: 10px);
 
 .icon-white-16 { 
-    @media (-webkit-max-device-pixel-ratio: 1.99), (max-device-pixel-ratio: 1.99) {
+    @media (-webkit-max-device-pixel-ratio: 1.99),(max-resolution: 1.99dppx), (max-device-pixel-ratio: 1.99) {
         background-image: $icons-white-16;
     }
-    @media (-webkit-min-device-pixel-ratio: 2), (min-device-pixel-ratio: 2) {
+    @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx), (min-device-pixel-ratio: 2) {
         background-image: $icons-white-16-x2; 
         background-size: $icon-16-x2-width image-height(sprite-path($icons-white-16-x2))/2;
     }
 }
 .icon-white-32 { 
-    @media (-webkit-max-device-pixel-ratio: 1.99), (max-device-pixel-ratio: 1.99) {
+    @media (-webkit-max-device-pixel-ratio: 1.99),(max-resolution: 1.99dppx), (max-device-pixel-ratio: 1.99) {
         background-image: $icons-white-32;
     }
-    @media (-webkit-min-device-pixel-ratio: 2), (min-device-pixel-ratio: 2) {
+    @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx), (min-device-pixel-ratio: 2) {
         background-image: $icons-white-32-x2; 
         background-size: $icon-32-x2-width image-height(sprite-path($icons-white-32-x2))/2;
     }
 }
 .icon-white-128 { 
-    @media (-webkit-max-device-pixel-ratio: 1.99), (max-device-pixel-ratio: 1.99) {
+    @media (-webkit-max-device-pixel-ratio: 1.99),(max-resolution: 1.99dppx), (max-device-pixel-ratio: 1.99) {
         background-image: $icons-white-128;
     }
-    @media (-webkit-min-device-pixel-ratio: 2), (min-device-pixel-ratio: 2) {
+    @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx), (min-device-pixel-ratio: 2) {
         background-image: $icons-white-128-x2; 
         background-size: $icon-128-x2-width image-height(sprite-path($icons-white-128-x2))/2;
     }
