--- a/source/css/mootor.scss
+++ b/source/css/mootor.scss
@@ -17,6 +17,7 @@ html, body {
 	@import "uipanel";
 	@import "uibutton";
 	@import "uiheader";
+	@import "uifooter";
 	@import "uinavbar";
 	@import "uiloading";
 	@import "uiform";
