Improvements on UIFooter, UINavBar to support icons

--- a/examples/demo/views/uinavbar/uinavbar.html
+++ b/examples/demo/views/uinavbar/uinavbar.html
@@ -27,5 +27,11 @@
         <a href="#icons">
             <span class="m-icon-new-window-white">
         </a>
+        <a href="#icons">
+            <span class="m-icon-comments-white">
+        </a>
+        <a href="#icons">
+            <span class="m-icon-chat-white">
+        </a>
     </nav>
 </footer>
