List draft. Updated example demo with list with icons

--- a/examples/demo/views/uinavbar/uinavbar.html
+++ b/examples/demo/views/uinavbar/uinavbar.html
@@ -1,5 +1,5 @@
 <header>
-    <h1>Title</h1>
+    <h1>UINavBar with header and footer</h1>
     <nav>
         <a href="#icons">
             <span class="m-icon-cloud-upload-white">
