--- a/examples/demo/views/index/index.html
+++ b/examples/demo/views/index/index.html
@@ -1,6 +1,20 @@
 <div class="index-view">
-<a href="#form" class="m-button">Form</a>
-<a href="#buttons" class="m-button">Buttons</a>
-<a href="#icons" class="m-button">Icons</a>
-
+    <nav class="m-list">
+        <a href="#form">
+            <span class="m-icon-chat"></span>
+            Form
+        </a>
+        <a href="#buttons">
+            <span class="m-icon-ok-circle"></span>
+            Buttons
+        </a>
+        <a href="#icons">
+            <span class="m-icon-camera"></span>
+            Icons
+        </a>
+        <a href="#uinavbar">
+             <span class="m-icon-question"></span>
+             UINavBar
+        </a>
+    </nav>
 </div>
