--- a/source/css/_list.scss
+++ b/source/css/_list.scss
@@ -7,6 +7,7 @@ nav.m-list {
        color: #333;
        line-height: 2.1em;
        border-bottom: 1px solid #ddd;
+       font-weight: bold;
        
        span {
            margin-right: 1.5em;
