Improvements, fixes, on UINavBar,UINavHeader,UINavFooter, with icons

--- a/examples/demo/views/uinavbar/uinavbar.html
+++ b/examples/demo/views/uinavbar/uinavbar.html
@@ -1,6 +1,11 @@
 <header>
-    <h1>UINavBar with header and footer</h1>
+    <h1>
+        UINavBar
+    </h1>
     <nav>
+        <a href="#icons">
+            <span class="m-icon-map-white">
+        </a>
         <a href="#icons">
             <span class="m-icon-cloud-upload-white">
         </a>
@@ -9,9 +14,6 @@
 
 <footer>
     <nav>
-        <a href="#icons">
-            <span class="m-icon-cloud-chat-white">
-        </a>
         <a href="#icons">
             <span class="m-icon-map-white">
         </a>
