--- a/demo/views/form/form.html
+++ b/demo/views/form/form.html
@@ -14,7 +14,7 @@
         <label>Select</label>
         <select class="m-select">
             <option value="01">Option 1</option>
-            <option value="02" selected>Option 2</option>
+            <option value="02" selected>Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2</option>
             <option value="03">Option 3</option>
         </select>
     </div>
