+ Normalize CSS. Improvements for Android. Updated build script. Updated mootor dist

--- a/source/css/mootor.scss
+++ b/source/css/mootor.scss
@@ -13,7 +13,9 @@ html, body {
 }
 
 .m-app {
-	@import "fonts";
+
+    @import "normalize";
+    @import "fonts";
 	@import "uipanel";
 	@import "uibutton";
 	@import "uiheader";
