--- a/spec/views/index/index.html
+++ b/spec/views/index/index.html
@@ -23,7 +23,7 @@
           <div class="ui corner label">
             <i class="icon asterisk"></i>
           </div>
-          <div id="initElement">initElement</div>
+          <div style="display:none" id="initElement">initElement</div>
           <div id="loadElement"></div>
           <div id="beforeLoadElement"></div>
           <div id="unloadElement"></div>
