New color palette. New view to show colors.

--- a/examples/demo/views/buttons/buttons.html
+++ b/examples/demo/views/buttons/buttons.html
@@ -17,21 +17,15 @@
     <input type="submit" value="Unspecified" class="m-button-outline-small" />
 
     <br><br>
-
-    <input type="submit" value="Default" class="m-button m-button-default" />
-    <input type="submit" value="Default" class="m-button-outline m-button-default" />
-    <input type="submit" value="Default" class="m-button-small m-button-default" />
-    <input type="submit" value="Default" class="m-button-outline-small m-button-default" />
+    <input type="submit" value="Default" class="m-button m-button-gray" />
+    <input type="submit" value="Default" class="m-button-outline m-button-gray" />
+    <input type="submit" value="Default" class="m-button-small m-button-gray" />
+    <input type="submit" value="Default" class="m-button-outline-small m-button-gray" />
     <br><br>
     <input type="submit" value="Primary" class="m-button m-button-primary" />
     <input type="submit" value="Primary" class="m-button-outline m-button-primary" />
     <input type="submit" value="Primary" class="m-button-small m-button-primary" />
     <input type="submit" value="Primary" class="m-button-outline-small m-button-primary" />
-    <br><br>
-    <input type="submit" value="Secondary" class="m-button m-button-secondary" />
-    <input type="submit" value="Secondary" class="m-button-outline m-button-secondary" />
-    <input type="submit" value="Secondary" class="m-button-small m-button-secondary" />
-    <input type="submit" value="Secondary" class="m-button-outline-small m-button-secondary" />
     <br><br>
     <input type="submit" value="Success" class="m-button m-button-success" />
     <input type="submit" value="Success" class="m-button-outline m-button-success" />
@@ -53,6 +47,11 @@
     <input type="submit" value="Danger" class="m-button-small m-button-danger" />
     <input type="submit" value="Danger" class="m-button-outline-small m-button-danger" />
     <br><br>
+    <input type="submit" value="White" class="m-button m-button-white" />
+    <input type="submit" value="White" class="m-button-outline m-button-white" />
+    <input type="submit" value="White" class="m-button-small m-button-white" />
+    <input type="submit" value="White" class="m-button-outline-small m-button-white" />
+    <br><br>
 
 
 
@@ -61,15 +60,11 @@
     <input type="submit" value="Unspecified" class="m-button-outline-fullwidth" />
     <br><br>
 
-    <input type="submit" value="Default" class="m-button-fullwidth m-button-default" />
+    <input type="submit" value="Default" class="m-button-fullwidth m-button-primary" />
     <br><br>
-    <input type="submit" value="Default" class="m-button-outline-fullwidth m-button-default" />
+    <input type="submit" value="Default" class="m-button-outline-fullwidth m-button-primary" />
     <br><br>
 
-    <input type="submit" value="Secondary" class="m-button-fullwidth m-button-secondary" />
-    <br><br>
-    <input type="submit" value="Secondary" class="m-button-outline-fullwidth m-button-secondary" />
-    <br><br>
     <input type="submit" value="Success" class="m-button-fullwidth m-button-success" />
     <br><br>
     <input type="submit" value="Success" class="m-button-outline-fullwidth m-button-success" />
@@ -86,3 +81,7 @@
     <br><br>
     <input type="submit" value="Danger" class="m-button-outline-fullwidth m-button-danger" />
     <br><br>   
+    <input type="submit" value="white" class="m-button-fullwidth m-button-white" />
+    <br><br>
+    <input type="submit" value="White" class="m-button-outline-fullwidth m-button-white" />
+    <br><br>
