--- a/examples/demo/views/index/index.html
+++ b/examples/demo/views/index/index.html
@@ -16,5 +16,9 @@
              <span class="m-icon-question"></span>
              UINavBar
         </a>
+        <a href="#colors">
+             <span class="m-icon-arrow"></span>
+             Colors
+        </a>
     </nav>
 </div>
