--- a/source/css/_uiheader-color.scss
+++ b/source/css/_uiheader-color.scss
@@ -1,6 +1,6 @@
 .m-header-container {
     // background-color: primary 4
-    @extend .m-bg-color-primary-4;
+    @extend .m-bg-color-primary;
         
     header {
         h1 {
