--- a/source/css/_uifooter-color.scss
+++ b/source/css/_uifooter-color.scss
@@ -1,6 +1,6 @@
 .m-footer-container {
     // background-color: primary 4
-    @extend .m-bg-color-primary-4;
+    @extend .m-bg-color-primary;
         
     footer {
         h1 {
