--- a/examples/demo/views/index/index.html
+++ b/examples/demo/views/index/index.html
@@ -17,7 +17,7 @@
              UINavBar
         </a>
         <a href="#colors">
-             <span class="m-icon-arrow"></span>
+             <span class="m-icon-music"></span>
              Colors
         </a>
     </nav>
